--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -158,12 +158,13 @@ jdk1.7 和 jdk1.8 里的实现也略有不同
 
 _jdk1.7_
 ConcurrentHashMap 是由Segment 数组、HashEntry 组成，HashEntry和HashMap 一样，都是数组+链表
-HashEntry 跟Entry 的区别是，核心数据value 和链表next 都是volatile 修饰的，保证了get 时的可见性
-核心原理：
-ConcurrentHashMap 使用了分段锁技术，其中Segment 继承于ReentrantLock，不会像HashTable 那样不管put 还是get 都做同步操作。
-理论上ConcurrentHashMap 支持Segment 数组数量的线程并发。每当一个线程占用锁访问一个Segment 时，不影响到其他的Segment
+HashEntry 跟Entry 的区别是，核心数据value 和链表next 都是volatile 修饰的，保证了get 时的可见性
 
-put方法：
+核心原理：
+ConcurrentHashMap 使用了分段锁技术，其中Segment 继承于ReentrantLock，不会像HashTable 那样不管put 还是get 都做同步操作。
+理论上ConcurrentHashMap 支持Segment 数组数量的线程并发。每当一个线程占用锁访问一个Segment 时，不影响到其他的Segment
+
+put方法：
 1、根据key 定位到Segment，在Segment 中进行put 操作
 2、尝试获取锁；若获取失败，则自旋获取锁；若尝试达到一定次数，则阻塞获取锁
 3、通过key 的hash 值定位具体到HashEntry
@@ -175,9 +176,9 @@ get方法：
 1、根据key 定位到Segment
 2、根据key 定位到HashEntry
 3、遍历查找具体的元素值，由于HashEntry 的value 和next 都是volatile 修饰的，保证了可见性，获取的都是最新的值，因此不需要加锁
-
+
 _jdk1.8_
-抛弃了jdk1.7的Segment 的分段锁，使用 CAS + Synchronized 保证并发的安全性
+抛弃了jdk1.7的Segment 的分段锁，使用 CAS + Synchronized 保证并发的安全性
 数据类型改为Node，但作用都是相同的，val 和 next 都使用volatile 修饰，保证了内存可见性
 
 put方法：
@@ -192,6 +193,48 @@ get方法：
 1、根据key 计算hashcode，如果key 在桶上，那么直接返回数据
 2、若是红黑树，则按红黑树方式取值
 3、若是链表，则按链表方式取值
+
+
+
+#Java IO
+**基本概念**
+同步 synchronous 和异步 asynchronous：
+    同步是一种可靠的有序运行机制，当我们进行同步操作时，后续的任务是等待当前调用返回，才会进行下一步；
+    异步则相反，其他任务不需要等待当前调用返回，通常依赖事件、回调等机制来实现任务间的次序关系
+阻塞 blocking 和 非阻塞 non-blocking：
+
+   在进行阻塞操作时，当前线程会处于阻塞状态，无法从事其他任务，只有条件就绪后才能继续，比如 ServerSocket 新连接建立完毕，或数据读取、写入操作完成；
+    而非阻塞则是不管IO操作是否结束，直接返回，相关操作会在后台继续处理
+
+
+**IO**
+1、IO 不仅是对文件的操作，网络编程中，Socket 通信也是IO 操作目标
+2、输入输出流（InputStream、OutputStream）是用于读取或写入字节的，例如操作图片文件
+3、而Reader、Writer 则用于操作字符，增加了字符编解码等功能，适用于从文件中读取或写入文本信息。本质上计算机操作的都是字节，不管网络通信还是文件存取，Reader、Writer相当于构建了应用逻辑和原始数据之间的桥梁
+4、BufferedOutputStream 等带缓冲区的实现，可以避免频繁的磁盘读写，进而提高IO 处理效率。这种设计利用了缓冲区，将批量数据进行一次操作，但在使用中需要flush
+5、很多IO 工具类都实现了 Closeable 接口，因此需要进行资源的释放。释放资源利用 try-with-resource、try-finally 等机制保证资源被释放
+
+_try-with-resource_
+JDK7 之后，IO 的工具类基本都实现了AutoCloseable 接口，那么就可以使用 try-with-resource 方式来释放资源
+try(FileInputStream fin = new FileInputStream(new File("test.txt"))){
+    System.out.println(fin.read());
+}catch(Exception e){}
+try-with-resource 并不是JVM 新增的功能，只是JDK 实现的一个语法糖，反编译之后，看到的已然是之前 try-finally 语法。
+若程序出现异常，且关闭资源时也出现异常，则外部catch 到的是程序的异常，关闭资源的异常会被抑制但不丢弃，可以通过异常的getSuppressed 方法
+
+
+**NIO**
+NIO 的组成部分：
+1、Buffer：高效的数据容器，除了布尔类型，所有的原始数据类型都有相应的 Buffer 实现
+2、Channel：类似于Linux 之类操作系统上看到的文件描述符，是NIO 中被用来支持批量式 IO 操作的一种抽象
+    File 或 Socket 通常被认为是比较高层次的抽象，而 Channel 则是更加操作系统底层的一种抽象，这也使得NIO 可以利用操作系统底层机制，获得特定场景的性能优化，例如，DMA（Direct Memory Access）等
+         不同层次的抽象是相互关联的，可以通过Socket 获取Channel，反之亦然
+3、Selector：是NIO 多路复用的基础，它提供了一种高效的机制，可以检测注册在Selector 上的多个Channel ，是否有Channel 处于就绪状态，进而实现单线程对多个Channel 的高效管理。
+    Selector 同样是基于底层操作系统机制，不同模式、不同版本都存在区别，Linux 依赖于epoll，windows 依赖于iocp
+
+
+
+
 
 
 
