--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -232,7 +232,36 @@ NIO 的组成部分：
 3、Selector：是NIO 多路复用的基础，它提供了一种高效的机制，可以检测注册在Selector 上的多个Channel ，是否有Channel 处于就绪状态，进而实现单线程对多个Channel 的高效管理。
     Selector 同样是基于底层操作系统机制，不同模式、不同版本都存在区别，Linux 依赖于epoll，windows 依赖于iocp
 
+NIO 实际是同步非阻塞的，同步，指每个准备好的Channel 处理是依次进行的；非阻塞，是指调度线程不会傻傻的阻塞等待读取数据，而是Channel 准备好之后，才进行数据处理。
 
+
+**Java 文件拷贝**
+1、利用java io 进行文件拷贝，FileInputStream 读取源文件，FileOutputStream 写入目标文件。@see com.demon.util.FileUtils#copyFileByStream
+2、利用java nio 的transferTo 或 transferFrom 方法。@see com.demon.util.FileUtils#copyFileByChannel
+3、利用java 类库中的工具类，@see java.nio.file.Files#copy
+
+**拷贝实现机制**
+用户态空间（User Space）和内核态空间（Kernel Space），这是操作系统层面的基本概念，操作系统内核、硬件驱动等运行在内核态空间，具有相对高的特权；而用户态空间，则是给普通应用和服务使用。
+当我们使用输入输出流（IO）进行读写时，实际上是进行了多次上下文切换，比如应用读取数据时，先在内核态将数据从磁盘读取到内核缓存，再切换到用户态将数据从内核缓存读取到用户缓存。
+而基于NIO 的transferTo，在Linux 和Unix 上，会使用零拷贝技术，数据传输并不需要用户态参与，省去了上下文切换的开销和不必要的内存拷贝，进而可能提高应用拷贝性能。不仅仅可以用在文件拷贝，读取文件然后进行Sokect 发送，也可以享受这种机制带来的性能和扩展性提高。
+
+_如何提高类似拷贝等IO 操作的性能_
+1、在程序中，使用缓存等机制，合理减少IO 次数
+2、使用transferTo 等机制，减少上下文切换和额外的IO 操作
+3、尽量减少不必要的转换过程，比如编解码；对象序列化和反序列化，比如操作文件或网络通信，如果不是过程中需要使用文本内容，可以不将二进制转换为字符串，而是直接传输二进制信息
+
+
+#接口和抽象类
+接口是对行为的抽象，它是抽象方法的集合，利用接口可以达到API 定义和实现分离的目的。接口不能实例化；不能包含任何非常量成员，任何field 都是隐含着public static final 的意义；Java8 中，允许接口中包含默认方法（default 修饰）和静态方法（static 修饰）的实现，也就是说，接口中要么是抽象方法，要么是静态方法和默认方法。
+_接口中默认方法的“类优先”原则_
+1、类中的方法，优先于接口中的默认方法：类实现了接口，接口中有默认方法method，类中有成员方法method，那么调用method，执行的是类的method 方法
+2、子接口中的默认方法优先于父接口的默认方法：接口B 继承于接口A，其中都有默认方法method，若类实现了接口A和B，那么调用method 方法，执行的是接口B 的method 方法
+3、两个接口中都有默认方法method，且接口直接没有关系，若类实现了两个接口，则需要处理接口之间的默认方法冲突
+
+有一类接口，没有定义任何方法，通常叫做Marker Interface
+Java8 中又增加了一类接口定义，functional interface，即只有一个方法定义的接口，通常使用@FunctionalInterface 注解来标记
+
+抽象类是不能实例化的类，用abstract 关键字修饰，其主要目的是代码重用。除了不能实例化，和普通的类没太大的区别，可以有一个或多个抽象方法，也可以没有抽象方法。抽象类大多用于抽取相关类的公共方法和公共成员变量，然后通过继承的方式达到代码复用的结果。
 
 
 
