--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -317,6 +317,27 @@ if(!lock.validate(stamp)){
 
 调用start() 方法来启动线程，若再次调用start() 会抛出异常IllegalThreadStateException
 
+#####什么是线程
+线程是系统调度的最小单元，一个进程可以包含多个线程，作为任务的实际运行者，有自己的栈（Stack）、寄存器（Register）、本地存储（ThreadLocal）等，但是会和进程内其他线程共享文件描述符、虚拟地址空间等
+
+#####影响线程状态的因素
+* 线程自身的方法，比如start()；还有join()等待线程结束；yield()是告诉调度器，主动让出CPU 资源；另外还有一些过时的方法
+* Object 类提供了wait、notify、notifyAll 方法。wait 让当前线程处于等待状态，直到其他线程notify 或notifyAll，本质上是提供了Monitor 的获取和释放的能力，是基本的线程间通信方式
+* 并发类库中的工具
+
+![](https://static001.geekbang.org/resource/image/31/dc/3169b7ca899afeb0359f132fb77c29dc.png)
+
+_ThreadLocal_
+可以保存线程的私有信息，其在线程生命周期内都有效，可以方便的在一个线程关联的不同业务模块之间传递信息，比如事务ID、Cookie 等上下文信息。
+数据储存在线程相关的 ThreadLocalMap 中，其内部条目是弱引用，当key 为null 时，该条目就变成“废弃条目”，相关value 就会被回收。因此废弃项目的回收依赖于显式触发，否则就要等待线程结束，这可能会导致OOM，因此使用时，需要remove，并且不要和线程池配合，因为worker 线程往往是不退出的。
+
+_死锁问题定位_ @see com.demon.java8.thread.DeadLockTest
+* 首先，获取进程PID，jps 或ps 命令
+* 然后，jstack 获取线程栈，jstack PID
+* 分析输出：DeadLock.txt
+* 也可以使用ThreadMXBean 扫描服务进程、定位死锁位置。需注意，对线程进行快照是重量级的操作，注意频度和时机。
+* 基于互斥量的锁发生死锁时，cpu 使用率往往很低；而死循环导致其他线程一直等待时，cpu 使用率往往很高
+
 
 
 
