--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -339,6 +339,28 @@ _死锁问题定位_ @see com.demon.java8.thread.DeadLockTest
 * 基于互斥量的锁发生死锁时，cpu 使用率往往很低；而死循环导致其他线程一直等待时，cpu 使用率往往很高
 
 
+#java.util.concurrent
+并发包里提供的容器，Queue、List、Set、Map，从命名上大致可分为 Concurrent*、CopyOnWrite* 和 Blocking* 等三类
+* Concurrent 类型基于lock-free（无锁），在常见的多线程访问场景下，提供较高的吞吐量
+* Concurrent 类型没有类似 CopyOnWrite 容器相对较重的修改开销，CopyOnWrite 修改时，会将原数组复制一份，然后修改后再覆盖原数组
+* Concurrent 类型提供较低的遍历一致性，当容器在遍历时，里面的元素发生改变，可以继续遍历，是fail-safe 的；size 等操作准确性也是有限的，未必是100%准确；读取的性能，具有一定的不确定性
+* 与弱一致性相对应的，是fail-fast，也就是遍历时，检测到容器元素发生变化，则抛出 ConcurrentModificationException 异常，不再继续遍历
+* BlockingQueue 基本都是基于锁实现，在常规队列操作基础上，Blocking 意味着特定的等待行操作，获取数据时（take）等待元素进入队列，插入时（put）等待队列出现空位
+
+####Blocking 的有界和无界
+* ArrayBlockingQueue 有界队列，其内部以final 的数字保存数据，数字的大小决定了队列的边界，在创建时，都要指定容量
+* LinkedBlockingQueue 有界队列，但是如果创建的时候，没指定容量，则容量自动被设置为 Integer.MAX_VALUE，成为了无界队列
+* SynchronousQueue 每个插入操作必须等待另一个线程的移除操作，同样的，每个移除操作也需要等待一个线程的插入操作。队列的内部容量是0，Executors.newCachedThreadPool() 的默认队列。Java 6使用CAS 替换了基于锁的逻辑
+* PriorityBlockingQueue、DelayedQueue 和LinkedTransferQueue 无界队列，put 操作不会发生等待的情况
+
+
+#Java提供的线程池
+* newCacheThreadPool() 是一种用来处理大量短时间工作任务的线程池，具有几个鲜明特点：会试图缓存线程并重用，当无缓存线程可用时，就会创建新的工作线程；如果线程闲置时间超过60秒，则被终止并移出缓存；长时间闲置时，不会消耗什么资源。内部使用 SynchronousQueue 作为工作队列
+* newFixedThreadPool(int nThreads) 重用指定数目（nThreads）的线程，其背后使用的是无界的工作队列，任何时候最多有nThreads 个工作线程是活动的。如果任务数量超过了工作线程数量，将在工作队列中等待空闲线程出现；如果有工作线程退出，将会有新的工作线程被创建，以补足指定的数目nThreads
+* newSingleThreadExecutor() 工作线程被限制为1，操作一个无界的工作队列，保证所有任务都是顺序执行的，最多会有一个活动的工作线程，并且不允许使用者改动线程池实例，因此可以避免其改变线程数目。
+* newSingleThreadScheduledExecutor() 和 newScheduledThreadPool(int corePoolSize) 创建的是ScheduledExecutorService，可以进行定时或周期性的工作调度，区别是单一工作线程还是多个工作线程。
+* newWorkStealingPool(int parallelism) Java 8加入的，其内部会构建 ForkJoinPool，利用Work-steal 算法，并行处理任务，不保证处理顺序。
+
 
 
 
