--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -347,7 +347,7 @@ _死锁问题定位_ @see com.demon.java8.thread.DeadLockTest
 * 与弱一致性相对应的，是fail-fast，也就是遍历时，检测到容器元素发生变化，则抛出 ConcurrentModificationException 异常，不再继续遍历
 * BlockingQueue 基本都是基于锁实现，在常规队列操作基础上，Blocking 意味着特定的等待行操作，获取数据时（take）等待元素进入队列，插入时（put）等待队列出现空位
 
-####Blocking 的有界和无界
+#####Blocking 的有界和无界
 * ArrayBlockingQueue 有界队列，其内部以final 的数字保存数据，数字的大小决定了队列的边界，在创建时，都要指定容量
 * LinkedBlockingQueue 有界队列，但是如果创建的时候，没指定容量，则容量自动被设置为 Integer.MAX_VALUE，成为了无界队列
 * SynchronousQueue 每个插入操作必须等待另一个线程的移除操作，同样的，每个移除操作也需要等待一个线程的插入操作。队列的内部容量是0，Executors.newCachedThreadPool() 的默认队列。Java 6使用CAS 替换了基于锁的逻辑
@@ -360,6 +360,38 @@ _死锁问题定位_ @see com.demon.java8.thread.DeadLockTest
 * newSingleThreadExecutor() 工作线程被限制为1，操作一个无界的工作队列，保证所有任务都是顺序执行的，最多会有一个活动的工作线程，并且不允许使用者改动线程池实例，因此可以避免其改变线程数目。
 * newSingleThreadScheduledExecutor() 和 newScheduledThreadPool(int corePoolSize) 创建的是ScheduledExecutorService，可以进行定时或周期性的工作调度，区别是单一工作线程还是多个工作线程。
 * newWorkStealingPool(int parallelism) Java 8加入的，其内部会构建 ForkJoinPool，利用Work-steal 算法，并行处理任务，不保证处理顺序。
+
+#####Executor 框架的组成
+![](https://static001.geekbang.org/resource/image/fc/5b/fc70c37867c7fbfb672fa3e37fe14b5b.png)
+* Executor 基础的接口，初衷是将任务提交和任务执行的细节解耦，定义了唯一方法 void execute(Runnable command)
+* ExecutorService 更加完善，提供了service 的管理功能，比如shutdown，也提供了更加全面的任务提交机制，比如返回Future 的submit 方法
+* Executors 提供了各种方便的静态工厂方法
+
+######ThreadPoolExecutor
+![](https://static001.geekbang.org/resource/image/18/65/18b64aee22c67f488171a73133e4d465.png) 
+* 工作队列负载存储用户提交的任务，这个工作队列，可以是容量为0的 SynchronousQueue（使用 newCachedThreadPool），也可以使用LinkedBlockingQueue（使用固定大小的线程池 newFixedThreadPool）
+private final BlockingQueue<Runnable> workQueue;
+* 内部的“线程池”，是指工作线程的集合，线程池需要在运行过程中管理线程创建、销毁。例如，带缓存的线程池，当任务压力大时，会创建新的工作线程；当压力退去，线程池会在闲置一段时间（默认60秒）后结束线程。线程池的工作线程被抽象为静态内部类 Worker，基于AQS 实现。
+private final HashSet<Worker> workers = new HashSet<Worker>();
+* ThreadFactory 提供上面所需的创建线程逻辑
+* 如果任务提交时被拒绝，需要提供处理逻辑，Java 提供了java.util.concurrent.ThreadPoolExecutor.AbortPolicy 等默认实现，也可以自定义
+* corePoolSize 核心线程数，即线程池中最小的线程数（设置了 allowCoreThreadTimeOut，则闲置线程根据 keepAliveTime 存活）。不同的线程池，这个值有很大区别，比如newFixedThreadPool 值为nThreads，而对于newCachedThreadPool 则为0
+* maximumPoolSize 最大线程数，newFixedThreadPool 值为nThreads，而对于newCachedThreadPool 则为Integer.MAX_VALUE
+* keepAliveTime 和TimeUnit 指定了额外的工作线程能够闲置多久
+* workQueue 工作队列，必须为BlockingQueue 
+* ctl 被赋予了双重角色，高位表示线程池状态，低位表示工作线程数目。通过 runStateOf(int ctl) 获取线程池状态，workerCountOf(int ctl) 获取工作线程数目，理论上限为2^29-1
+
+_线程池大小的选择策略_
+* 如果任务主要是进行计算，那么意味着CPU 的处理能力是稀缺资源，那么太多的线程反而可能导致大量的上下文切换开销。通常建议按照CPU 核数N 或者 N+1
+* 如果是较多等待的任务，例如I/O 操作较多，可以考虑：线程数 = CPU 核数 × （1 + 平均等待时间 / 平均工作时间）
+
+
+#CAS AQS
+CAS（compare and swap）：更新时，如果当前数值未变，代表没有其他线程进行并发修改，则更新成功；否则，要么进行重试，要么返回一个成功或失败的结果。依赖于CPU 提供的指令，x86 CPU 提供了cmpxchg。
+atomic 包中就是基于CAS，依赖于Unsafe 进行底层操作，以volatile 修饰value 字段，记录数值，以保证可见性。
+Atomic*FieldUpdater 可以对类中的volatile 字段进行CAS 操作，基于反射机制创建，需要保证类型和字段名称正确
+
+
 
 
 
