--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -389,7 +389,8 @@ _线程池大小的选择策略_
 #CAS AQS
 CAS（compare and swap）：更新时，如果当前数值未变，代表没有其他线程进行并发修改，则更新成功；否则，要么进行重试，要么返回一个成功或失败的结果。依赖于CPU 提供的指令，x86 CPU 提供了cmpxchg。
 atomic 包中就是基于CAS，依赖于Unsafe 进行底层操作，以volatile 修饰value 字段，记录数值，以保证可见性。
-Atomic*FieldUpdater 可以对类中的volatile 字段进行CAS 操作，基于反射机制创建，需要保证类型和字段名称正确
+Atomic*FieldUpdater 可以对类中的volatile 字段进行CAS 操作，基于反射机制创建，需要保证类型和字段名称正确。
+CAS 可能会过度消耗CPU，因此需要考虑自旋的次数；还可能导致ABA 问题，仅仅判断数值可能导致不合理的修改，因此，需要建立类似版本号的机制来保证CAS 的正确性。
 
 
 
