--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -392,18 +392,192 @@ _线程池大小的选择策略_
 
 
 #CAS AQS
-CAS（compare and swap）：更新时，如果当前数值未变，代表没有其他线程进行并发修改，则更新成功；否则，要么进行重试，要么返回一个成功或失败的结果。依赖于CPU 提供的指令，x86 CPU 提供了cmpxchg。
+#####CAS（compare and swap）
+更新时，如果当前数值未变，代表没有其他线程进行并发修改，则更新成功；否则，要么进行重试，要么返回一个成功或失败的结果。依赖于CPU 提供的指令，x86 CPU 提供了cmpxchg。
 atomic 包中就是基于CAS，依赖于Unsafe 进行底层操作，以volatile 修饰value 字段，记录数值，以保证可见性。
 Atomic*FieldUpdater 可以对类中的volatile 字段进行CAS 操作，基于反射机制创建，需要保证类型和字段名称正确。
 CAS 可能会过度消耗CPU，因此需要考虑自旋的次数；还可能导致ABA 问题，仅仅判断数值可能导致不合理的修改，因此，需要建立类似版本号的机制来保证CAS 的正确性。
 
-AQS（AbstractQueuedSynchronizer）：是Java 并发包中，实现各种同步结构和部分其他组成单元（线程池中的Worker）的基础
-内部数据和方法：
+#####AQS（AbstractQueuedSynchronizer）
+是Java 并发包中，实现各种同步结构和部分其他组成单元（线程池中的Worker）的基础，内部数据和方法：
 * 一个volatile 的整数成员变量表示状态，同时提供getState()和setStatus()，private volatile int status;
 * 一个FIFO 的等待线程队列，以实现多线程间竞争和等待，这是AQS 的核心之一
 * 各种基于CAS 的基础操作方法，已经各种期望具体同步结构去实现的 acquire/release 方法
 
 利用AQS 实现一个同步结构，至少需要实现两个方法：acquire 操作，用以获取资源的独占权；release 操作，释放对某个资源的独占。
+AQS 支持两种同步方式：1、独占式  2、共享式。
+独占式如 ReentrantLock，共享式如 Semaphore、CountDownLatch，组合式如 ReentrantReadWriteLock
+
+同步器的设计基于模板方法模式的，使用方式：@see com.demon.java8.thread.AQS
+1. 使用者继承 AbstractQueuedSynchronizer 并重写指定的方法，即对共享资源status 的 acquire/release
+2. 将AQS 组合在自定义同步组件的实现中，并调用模板方法，而这些模板方法会调用使用者重写的方法
+
+可重写的方法：
+* protected boolean tryAcquire(int arg)：独占式获取同步状态，获取成功返回true，失败返回false
+* protected boolean tryRelease(int arg)：独占式释放同步状态，等待中的其他线程此时将有机会获取到同步状态
+* protected int tryAcquireShared(int arg)：共享式获取同步状态，返回值大于0，代表获取成功；否则获取失败
+* protected boolean tryReleaseShared(int arg)：共享式释放同步状态，成功为true，失败为false
+* protected boolean isHeldExclusively()：独占模式，返回true；其他返回false
+
+######源码分析
+AQS 维护一个共享资源status，通过内置的FIFO 队列来完成获取资源线程的排队工作，队列是CLH 队列（Craig, Landin, and Hagersten）。该队列由Node 节点组成，每个Node 维护一个prev 引用和next 引用，分别指向自己的前驱和后继节点。AQS 维护两个指针，分别指向头部head 和尾部tail。其实就是个双端双向列表
+···
+      +------+  prev +-----+       +-----+
+ head |      | <---- |     | <---- |     |  tail
+      +------+       +-----+       +-----+
+···
+当现场获取资源失败时，会被构造成一个Node 加入CLH 队列中，同时当前线程会被阻塞在队列中（通过LockSupport.park 实现，即等待态）；当持有同步状态的线程释放同步状态时，会唤醒后继节点，然后此节点线程继续加入到对同步状态的争夺中。
+**Node 节点**
+```
+static final class Node {
+        /** waitStatus值，表示线程已被取消（等待超时或者被中断）*/
+        static final int CANCELLED =  1;
+        /** waitStatus值，表示后继线程需要被唤醒（unpaking）*/
+        static final int SIGNAL    = -1;
+        /**waitStatus值，表示结点线程等待在condition上，当被signal后，会从等待队列转移到同步到队列中 */
+        static final int CONDITION = -2;
+        /** waitStatus值，表示下一次共享式同步状态会被无条件地传播下去  */
+        static final int PROPAGATE = -3;
+        /** 等待状态，初始为0 */
+        volatile int waitStatus;
+        /**当前结点的前驱结点 */
+        volatile Node prev;
+        /** 当前结点的后继结点 */
+        volatile Node next;
+        /** 与当前结点关联的排队中的线程 */
+        volatile Thread thread;       
+}
+```
+**独占式**
+_获取同步状态 acquire()_
+```
+    public final void acquire(int arg) {
+        if (!tryAcquire(arg) &&
+            acquireQueued(addWaiter(Node.EXCLUSIVE), arg))
+            selfInterrupt();
+    }
+```
+_addWaiter_
+```
+    private Node addWaiter(Node mode) {
+        Node node = new Node(Thread.currentThread(), mode); // 为当前线程构造节点
+        Node pred = tail;   // 获取尾节点
+        if (pred != null) { // 若尾节点不为null，则通过CAS 方式，将当前节点添加到尾部：prev 指向原尾部节点，队列尾部更新为当前节点，原尾部节点的next 指向当前节点
+            node.prev = pred;
+            if (compareAndSetTail(pred, node)) {
+                pred.next = node;
+                return node;
+            }
+        }
+        enq(node);  // 若尾节点为null，或CAS 更改尾部节点失败，则通过enq 处理
+        return node;
+    }
+```
+_enq_
+```
+    private Node enq(final Node node) {
+        for (;;) {  // 处理失败，通过自旋一直重试
+            Node t = tail;  // 获取尾节点
+            if (t == null) { // 若尾节点为null，表示队列是空的，需要初始化
+                if (compareAndSetHead(new Node()))  // 创建节点，头节点和尾节点都引用
+                    tail = head;
+            } else {
+                node.prev = t;  // 若尾节点不为null，则通过CAS 方式，将当前节点添加到尾部：prev 指向原尾部节点，队列尾部更新为当前节点，原尾部节点的next 指向当前节点
+                if (compareAndSetTail(t, node)) {
+                    t.next = node;
+                    return t;
+                }
+            }
+        }
+    }
+```
+_acquireQueued_
+```
+    final boolean acquireQueued(final Node node, int arg) {
+        boolean failed = true;
+        try {
+            boolean interrupted = false;
+            for (;;) {
+                final Node p = node.predecessor();  // 找到当前节点的前驱节点
+                if (p == head && tryAcquire(arg)) { // 若是前驱节点是头结点，则tryAcquire
+                    setHead(node);      // 获取同步状态成功，则将当前节点设置为头结点
+                    p.next = null;      // 解除原头结点的next 引用，方便GC
+                    failed = false;
+                    return interrupted;
+                }
+                if (shouldParkAfterFailedAcquire(p, node) &&    // 若不是头结点，或获取同步状态失败，则通过 shouldParkAfterFailedAcquire 判断是否应该阻塞
+                    parkAndCheckInterrupt())                    // 若需要阻塞，则通过 parkAndCheckInterrupt 阻塞线程；若不需要阻塞，则继续循环
+                    interrupted = true;
+            }
+        } finally {
+            if (failed)
+                cancelAcquire(node);
+        }
+    }
+```
+_shouldParkAfterFailedAcquire_
+用来判断当前节点线程是否需要阻塞，若返回true，也就是当前节点的前驱节点状态是SIGNAL，则当前节点可以安全的进入parking 状态，通过parkAndCheckInterrupt 阻塞线程并中断
+```
+    private static boolean shouldParkAfterFailedAcquire(Node pred, Node node) {
+        int ws = pred.waitStatus;       // 获取前驱节点的waitStatus
+        if (ws == Node.SIGNAL)          // 若前驱节点状态是SIGNAL，意味着当前节点可以被park
+            return true;
+        if (ws > 0) {                   // 若前驱节点状态大于0，意味着CANCEL，也就是此节点已无效
+            do {
+                node.prev = pred = pred.prev;   // 从后往前遍历，找到非CANCEL 的节点，将当前节点的前驱节点设置为找到的节点
+            } while (pred.waitStatus > 0);
+            pred.next = node;
+        } else {
+            compareAndSetWaitStatus(pred, ws, Node.SIGNAL); // 若为其他状态，则将前驱节点状态置为SIGNAL
+        }
+        return false;
+    }
+```
+总结下逻辑：
+1. 调用tryAcquire 方法，若返回true，表示同步状态获取成功，直接返回；若返回false，则表示获取同步状态失败，进入步骤2；
+2. 获取同步状态失败，则构造独占式（Node.EXCLUSIVE）节点，通过addWaiter 将节点添加到同步队列的尾部，这个过程通过CAS 保证线程安全
+3. 加入队列的节点线程进入自旋状态，若是第二个节点（前驱节点是头结点），则尝试获取同步状态，获取成功则当前节点变为头结点；否则当其前驱节点状态为SIGNAL，线程进入阻塞状态，直至被中断或前驱节点唤醒
+
+_释放同步状态 release()_
+```
+    public final boolean release(int arg) {
+        if (tryRelease(arg)) {              // 尝试释放同步状态，若成功，唤醒后继节点；失败返回false
+            Node h = head;      // 获取头结点
+            if (h != null && h.waitStatus != 0)     // 若头节点不为空，且节点状态不是初始化，则唤醒后继节点
+                unparkSuccessor(h);
+            return true;
+        }
+        return false;
+    }
+```
+_unparkSuccessor_
+```
+    private void unparkSuccessor(Node node) {
+        int ws = node.waitStatus;
+        if (ws < 0)
+            compareAndSetWaitStatus(node, ws, 0);       // 若节点状态小于0，则将节点状态置为初始化0
+        Node s = node.next;
+        if (s == null || s.waitStatus > 0) {        // 若后继节点为null，或节点状态大于0（CANCEL），则表示后继节点无效
+            s = null;
+            for (Node t = tail; t != null && t != node; t = t.prev)     // 从尾节点倒序遍历，找到最靠近头节点的一个处于正常阻塞状态待唤醒（节点状态小于0）的节点
+                if (t.waitStatus <= 0)
+                    s = t;
+        }
+        if (s != null)
+            LockSupport.unpark(s.thread);   // 若需要唤醒的节点不为null，则通过 LockSupport.unpark 唤醒
+    }
+```
+总结下逻辑：需要找到头结点的后继节点进行唤醒，若后继节点为空或状态为CANCEL，则需要倒序遍历找到离头结点最近的一个正常阻塞的节点，唤醒其对应的线程，被唤醒的线程继续acquireQueued 循环竞争同步状态
+
+**共享式**
+对于独占式同步组件，同一时刻只有一个线程可以获取同步状态，其他线程都需要去排队等候，其待重写的方法返回boolean 值（boolean tryAcquire）；对于共享式同步组件，同一时刻可以有多个线程获取到同步状态，这也是共享的意义所在，其待重写的方法返回int 值（int tryAcquireShared）
+_共享式获取同步状态 acquireShared_
+```
+    public final void acquireShared(int arg) {
+        if (tryAcquireShared(arg) < 0)
+            doAcquireShared(arg);
+    }
+```
 
 
 
