--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -570,14 +570,80 @@ _unparkSuccessor_
 总结下逻辑：需要找到头结点的后继节点进行唤醒，若后继节点为空或状态为CANCEL，则需要倒序遍历找到离头结点最近的一个正常阻塞的节点，唤醒其对应的线程，被唤醒的线程继续acquireQueued 循环竞争同步状态
 
 **共享式**
-对于独占式同步组件，同一时刻只有一个线程可以获取同步状态，其他线程都需要去排队等候，其待重写的方法返回boolean 值（boolean tryAcquire）；对于共享式同步组件，同一时刻可以有多个线程获取到同步状态，这也是共享的意义所在，其待重写的方法返回int 值（int tryAcquireShared）
+对于独占式同步组件，同一时刻只有一个线程可以获取同步状态，其他线程都需要去排队等候，其待重写的方法返回boolean 值（boolean tryAcquire）；对于共享式同步组件，同一时刻可以有多个线程获取到同步状态，这也是共享的意义所在，其待重写的方法返回int 值（int tryAcquireShared）：
+* 当返回值大于0时，表示获取同步状态成功，并且还有剩余的同步状态可供其他线程获取
+* 当返回值为0时，表示获取同步状态成功，但是没有可用的同步状态了
+* 当返回值小于0时，表示获取同步状态失败
+
 _共享式获取同步状态 acquireShared_
 ```
     public final void acquireShared(int arg) {
-        if (tryAcquireShared(arg) < 0)
+        if (tryAcquireShared(arg) < 0)  // 返回值小于0，获取同步状态失败，需要排队
             doAcquireShared(arg);
     }
 ```
+_doAcquireShared_
+```
+    private void doAcquireShared(int arg) {
+        final Node node = addWaiter(Node.SHARED);       // 构造一个共享节点，添加到队列尾部；若队列为空，则先创建一个空节点，然后将该节点添加到队列尾部
+        boolean failed = true;      // 是否获取成功
+        try {
+            boolean interrupted = false;        // 线程parking 过程中是否被中断过
+            for (;;) {
+                final Node p = node.predecessor();      // 获取该节点的前驱节点
+                if (p == head) {        // 前驱节点是头结点
+                    int r = tryAcquireShared(arg);      // 尝试获取同步状态
+                    if (r >= 0) {       // 若结果大于等于0，表示获取同步状态成功
+                        setHeadAndPropagate(node, r);   // 获取成功，则将该节点设置为头节点，若还有可用资源（r>0），则传播下去，即继续唤醒后继节点
+                        p.next = null;  // 原头结点的后继节点置为null，方便GC
+                        if (interrupted)
+                            selfInterrupt();
+                        failed = false;
+                        return;
+                    }
+                }
+                if (shouldParkAfterFailedAcquire(p, node) &&    // 校验是否可以阻塞线程
+                    parkAndCheckInterrupt())    // 可以阻塞，就阻塞线程
+                    interrupted = true;
+            }
+        } finally {
+            if (failed)
+                cancelAcquire(node);
+        }
+    }
+```
+
+#类加载过程
+Java 的类加载过程分为三个主要步骤：加载、链接、初始化
+**加载（Loading）**
+这是Java 将字节码数据从不同的数据源读取到JVM 中，并映射为JVM 认可的数据结构（Class 对象），这里的数据源可能是各种形态，如jar 文件、class 文件，甚至是网络数据源等；如果输入数据不是ClassFile 的结构，则会抛出ClassFormatError。加载阶段是用户参与的阶段，可以自定义类加载器，去实现自己的类加载过程。
+**链接（Linking）**
+这是核心的步骤，是把原始的类定义信息平滑的转化入JVM 运行的过程。分为三个步骤：
+* 验证（Verification），这是虚拟机安全的重要保障，JVM 需要校验字节码信息是否符合JVM 规范，若不符合就认为是VerifyError，可以防止恶意信息或不合规的信息危害JVM 的运行。此阶段可能触发更多的class 加载
+* 准备（Preparation），创建类或接口中的静态变量，并初始化静态变量的初始值。这里的初始化侧重点是分配所需的内存空间，不会取执行更进一步的JVM 指令（例如putstatic 指令，给静态资源赋值，是在初始化阶段执行的）
+* 解析（Resolution），这一步会将常量池中的符号引用（symbolic reference）替换为直接引用
+**初始化（initialization）**
+这一步真正去执行类初始化的逻辑，包括静态资源的赋值，以及执行类定义中的静态代码块内的逻辑，编译器在编译阶段会把这部分逻辑整理好，父类型的初始化逻辑优先于当前类型的逻辑。
+
+_常量和普通静态变量在准备阶段有什么区别_
+非引用类型的常量（public static final int a），在准备阶段赋值
+普通的静态变量（public static int a）和引用类型的常量（public static final Integer a），需要额外调用putstatic JVM指令赋值，是在初始化阶段执行，而不是准备阶段调用
+
+#####类加载器
+* BootStrap 引导程序或原始类加载器，是所有类加载器的父类，加载rt.jar 和 jre/lib 下的jar 文件，使用本机代码编写
+* ExtClassLoader 扩展类加载器，加载 jre/lib/ext/ 目录下的jar 包或java.ext.dirs 系统属性中提到的目录。getParent() 返回null
+* AppClassLoader 应用类加载器（系统类加载器），加载应用程序基本的文件，类路径环境变量-classpath 或 -cp 选项找到的文件。getParent() 返回ExtClassLoader
+类加载器的三个重要特征：
+* 双亲委派模型：当类加载器（class-loader）试图加载某个类型的时候，会先让父类加载器去尝试加载，若父类加载器找不到相应类型，再自己加载。可以避免重复加载Java 类型。
+* 可见性：子类加载器可以访问父类加载器加载的类型，但是反过来是不允许的
+* 单一性：由于父类加载器对于子类加载器是可见的，所以父类加载器加载过的类型，子类加载器不会重复加载。
+
+**自定义类加载器**
+相关用例：
+1. 帮助修改现有字节码，例如编织代理
+2. 创建动态适合用户需求的类，例如JDBC 中，通过动态类加载完成不同驱动程序实现之间的切换
+3. 为具有相同的包和名称的类加载不同的字节码时，实现类版本控制机制，可以通过URL 类加载器（通过URL 加载jar）或自定义类加载器来实现
+
 
 
 
