--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -644,6 +644,58 @@ _常量和普通静态变量在准备阶段有什么区别_
 2. 创建动态适合用户需求的类，例如JDBC 中，通过动态类加载完成不同驱动程序实现之间的切换
 3. 为具有相同的包和名称的类加载不同的字节码时，实现类版本控制机制，可以通过URL 类加载器（通过URL 加载jar）或自定义类加载器来实现
 
+#JVM 内存划分
+* 程序计数器：线程私有，并且任何时间一个线程都只有一个方法在执行，程序计数器会存储线程正在执行的Java 方法的JVM 指令地址；如果执行的是本地方法，则是undefined
+* Java 虚拟机栈：线程私有，每个线程在创建时都会创建一个虚拟机栈，其内部保存一个个的栈帧，对应着Java 的一次次方法调用。
+同一时间一个线程也只有一个活动的栈帧，通常叫当前帧，方法所在的类叫当前类。如果方法调用了其他方法，对应的新的栈帧就会入栈，创建出一个新的栈帧，一直到返回结果或执行结束，再出栈。
+栈帧中存储着局部变量表、操作数栈、动态链接、方法正常退出或者异常退出的定义等
+* 堆：是Java 内存的核心区域，线程共享，用来放置Java 对象实例，几乎所有创建的Java 对象实例都被分配到堆上。虚拟机参数-Xmx、-Xms 就是指定堆的最大和最小空间。GC 回收策略是分代回收
+* 方法区：也是线程共享的，用于存储所谓的元数据（Meta），例如类结构信息，以及对应的运行时常量池、字段、方法代码等。JDK 旧版本的永久代，JDK 8 删除了永久代，增加了元数据区
+* 运行时常量池：是方法区的一部分，可以存放各种常量信息，不管是编译期生成的各种字面量，还是需要在运行时决定的符号引用
+* 本地方法栈：和Java 虚拟机栈非常相似，支持对本地方法调用，也是线程私有
+
+_Java 对象是不是都创建在堆上_
+Hotspot JVM 可以明确所有对象实例都在堆上创建。
+JDK 7 之前，字符串的缓存和静态变量，被分配在永久代上。但之后永久代被元数据区替代了，但是字符串缓存和静态变量并没有转移到元数据区，而是直接在堆上分配，因此，所有对象都在堆上分配
+
+_OOM 发生的区域_
+除了程序计数器，其他区域都可能发生 OutOfMemoryError
+* 堆内存不足，抛出 java.lang.OutOfMemoryError:Java heap space，原因很多，可能存在内存泄露；也可能堆的大小不合理，比如要处理比较大的数据量，但是没有显式的指定大小或指定的偏小；或者JVM 处理引用不合理，导致堆积内存无法释放
+* 虚拟机栈和本地方法栈，如果递归调用，没有退出条件，导致栈被压满，会抛出StackOverFlowError；如果JVM 试图去扩展栈空间而失败，会抛出OutOfMemoryError
+* 老版本的JDK，永久代的大小是有限的，并且回收不积极，也会出现OOM，例如大量的字符串缓存占用，也会导致OOM，异常信息：OutOfMemoryError:PermGen space
+* 随着元数据的引入，异常信息变成了 OutOfMemoryError:Metaspace
+* 直接内存（堆外内存），异常信息： OutOfMemoryError:Direct buffer memory
+
+_问题：试图分配一个100M的大数组时发生了OOM，但是GC日志显示，堆内存还有远不止100M的空间，分配失败的原因？_
+1. 对内存是分代的，分为新时代和老生代，剩余的内存会被分开，可能都不足100M。新生代内存不足时，会尝试在老年代创建对象
+2. 数组的内存空间是连续的，若GC 回收没有压缩算法，则内存空间不连续，导致没有一块100M 的连续内存
+
+#####堆内存
+![](https://static001.geekbang.org/resource/image/72/89/721e97abc93449fbdb4c071f7b3b5289.png)
+1. 新生代（Young Gen）
+新生代是大部分对象创建和销毁的区域，其内部又分为 Eden 区域，作为对象初始化分配的区域；两个 Survivor ，也叫from、to区域，用来存放 Minor GC 剩余的对象
+* 每次 Minor GC，会将 Eden 中存活下来的对象和from 区域的对象，拷贝到 to 区，然后清空Eden 和from，然后to 区改为from 区。这样做是了减少内存的碎片化
+* 从内存模型的角度，Eden 区域继续划分，还有Thread Local Allocation Buffer（TLAB），这是每个线程私有缓存区域，线程分配内存是，优先在自己的TLAB 上分配，避免多线程操作同一地址时，可能需要加锁进而影响分配速度。TLAB 仍然在堆上，内部结构start、end 为起始地址，分配指针top 移动，当top 与end 相遇，表示缓存已满，JVM 会试图在Eden 里分配。
+2. 老年代（Old Gen）
+放置长生命周期的对象，通常是从Servivor 区拷贝过来的，也有特殊情况，若对象太大，JVM 会试图直接分配到老年代
+3. 永久代（Perm Gen）
+储存常量池，字符串缓存等，JDK 8之后就不存在永久代了
+4. JVM 参数
+* -Xmx value 最大堆内存
+* -Xms value 最小堆内存，堆的大小并不会直接扩展到上限，保留的空间（reserved）大于实际能够使用的空间（committed），当内存需求不断扩大时，JVM 会逐渐扩展新生代等区域的大小，所以 Virtual 区域代表的是暂时不可用（uncommitted）的空间
+* -XX:NewRatio=value 老年代和新生代的比例，默认是2，意味着老年代是新生代的2倍，新生代是堆大小的 1/3
+* -XX:NewSize=value 也可以直接设置新生代的内存大小
+* -XX:ServivorRatio=value 设置Eden 和Survivor 的大小比例，默认值是8，表示Survivor 区域是 Eden 的1/8，也就是新生代的1/10，因为 Young Gen=Eden + 2*Survivor
+* -XX:TLABWasteTargetPercent=1 设置TLAB 的初始大小，默认为1，表示TLAB 占新生代的1/100
+5. NMT（Native Memory Tracking） 特性对JVM 分析，@see com.demon.java8.jvmnmt.HelloWorld
+
+# Java 常见的垃圾回收器
+* Serial GC：最古老的垃圾回收器，其收集工作是单线程的，并在垃圾收集过程中，会进入“Stop-The-World”状态。但其单线程设计意味着精简的GC 实现，无需维护复杂的数据结构，初始化也简单，一直是 Client 模式下JVM 的默认选项。从年代的角度，老年代实现单独称为Serial Old，采用标记-整理（Mark-Compact）算法，区别于新生代的复制算法。JVM 参数是-XX:+UseSerialGC
+* PerNew GC：新生代GC 实现，是Serial GC 的多线程版本，最常见的应用场景是配合老年代的CMS GC 工作。JVM 参数是 -XX:+UseParNewGC
+* CMS（Concurrent Mark Sweep）GC：基于标记-清除（Mark-Sweep）算法，设计目标是减少停顿时间，这一点对于Web 等反应时间敏感的应用非常重要，但是其采用的算法导致存在着内存碎片化的问题，难以避免长时间运行等情况下发生full GC，导致恶劣的停顿。另外，强调了并发（Concurrent），CMS 会占用更多CPU 资源，并和用户线程争抢。CMS 在JDK 9 被标记为deprecated。JVM 参数是-XX:+UseConcMarkSweepGC
+* Parrallel GC：JDK 8之前，是server 模式下的默认 GC 选择，也被称为吞吐量优先的GC。算法和Serial GC 相似，但实现复杂的多，特点是新生代和老年代GC 是同时进行的，在常见的服务器环境中更加高效。
+JVM 参数是-XX:+UseParallelGC，还支持直接设置暂停时间或吞吐量等目标，JVM 会自适应调整，参数是-XX:MaxGCPauseMillis=value  -XX:GCTimeRatio=N // GC 时间和用户时间比例 = 1 / (N+1)
+* G1 GC：是一种兼顾吞吐量和停顿时间的GC 实现，JDK 9以后的默认GC 选项。G1 可以直观的设置停顿的目标，相比于CMS，最差情况要好很多。也存在年代的概念，但是其内部将堆分为一个个region，Region 之间是复制算法，整体上是标记-整理算法，避免了碎片化，尤其当Java 堆非常大时（建议16G 以上），G1 的优势更加明显。JVM 参数是-XX:+UseG1GC
 
 
 
