--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -726,6 +726,38 @@ _不可重复读和幻读的区别_
 * 可重复读（Repeatable reads）：保证同一个书屋中多次读取的数据是一致的，这是MySql InnoDB 默认的隔离级别
 * 串行化（Serialization）：并发事务直接是串行化的，意味着读取需要获得共享读锁，更新需要获取排它锁，如果Sql 使用where 条件，还会获得区间锁（MySql 以GAP 锁形式实现，可重复读级别中默认也会使用），这是最高的隔离级别
 
+_从架构的角度，MqSql 可分为几层_
+自上而下可分为基础支撑层、数据处理层、API 接口
+* 基础支撑层：用来做连接管理、事务管理、配置加载、缓存管理等基础组件，为上层提供最基础的支撑。
+* 数据处理层：用来做参数映射、sql解析、sql执行、结果映射等处理，可以理解为请求到达，完成一次数据库操作的流程。
+* API 接口层：主要对外提供API，提供诸如数据的增删改查、获取配置等接口。
+
+#Spring Bean 的生命周期
+分为创建和销毁两个过程，创建的步骤包括：
+* 实例化Bean 对象
+* 设置Bean 的属性
+* 如果通过Aware 接口声明了依赖关系，则会注入Bean 对容器基础设施层面的依赖。包括BeanNameAware、BeanFactoryAware 和ApplicationContextAware，分别会注入Bean ID、Bean Factory 和ApplicationContext
+* 调用BeanPostProcessor 的前置初始化方法postProcessBeforeInitialization
+* 如果实现了InitializingBean 接口，则会调用afterPropertiesSet 方法
+* 调用Bean 自身定义的初始化方法
+* 调用BeanPostProcessor 的后置初始化方法postProcessAfterInitialization
+* 创建过程完毕
+
+![](https://static001.geekbang.org/resource/image/3a/7e/3a51f06f56b905b8fbf1661359e1727e.png)
+
+销毁过程会依次调用DisposableBean 的destroy 方法和Bean 自己的destroy 方法
+
+####Spring Bean 的作用域
+有五个作用域：
+* Singleton：是Spring 的默认作用域，为每个IOC 容器创建唯一的一个Bean 实例。
+* Prototype：针对每个getBean 请求，容器都会单独创建一个Bean 实例。
+从Bean 的特点来看，Prototype 适合有状态的Bean，而Singleton 则更适合无状态的情况。另外，Prototype 作用域需要慎重考虑，因为频繁创建和销毁Bean 是有明显开销的。
+如果是Web 容器，则支持另外三种作用域：
+* Request：为每个HTTP 请求创建单独的Bean 实例
+* Session：Bean 实例的作用域是Session 范围
+* GlobalSession：用于Portlet 容器，因为每个Portlet 有单独的Session，GlobalSession 提供一个全局性的HTTP Session
+
+
 
 
 
