--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -757,6 +757,13 @@ _从架构的角度，MqSql 可分为几层_
 * Session：Bean 实例的作用域是Session 范围
 * GlobalSession：用于Portlet 容器，因为每个Portlet 有单独的Session，GlobalSession 提供一个全局性的HTTP Session
 
+######Spring AOP
+默认基于JDK 动态代理，设置了proxy-target-class="true" 强制使用cglib 动态代理。
+几个关键概念：AOP 的实现方式包括xml 方式、注解方式以及自定义注解方式，具体例子见 com.demon.java8.spring.aop 包。
+* Aspect：通常叫方面，是跨不同Java 类层面的横切性逻辑。实现形式上，可以是xml 文件中配置的普通类，也可以是@Aspect 注解声明的类。运行时，Spring 框架会创建类似 Advisor 来指代它，其内部会包括切入的时机（PointCut）和切入的动作（Advice）
+* Join Point：是Asprct 可以切入的特定点，在Spring 里只有方法可以作为Join Point
+* Advice：定义了切面中能够采取的动作
+* PointCut：负责具体定义Aspect 被应用在哪些Join Point，可以通过指定具体的类名和方法名来实现，或者使用正则表达式来定义
 
 
 
