--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -765,7 +765,23 @@ _从架构的角度，MqSql 可分为几层_
 * Advice：定义了切面中能够采取的动作
 * PointCut：负责具体定义Aspect 被应用在哪些Join Point，可以通过指定具体的类名和方法名来实现，或者使用正则表达式来定义
 
+######Spring 事务隔离级别
+org.springframework.transaction.annotation.Isolation 枚举类定义了五个隔离级别的值：
+* DEFAULT：默认值，表示使用底层数据库的默认隔离级别。大部分数据库，通常这值就是 READ_COMMITTED
+* READ_UNCOMMITTED：该隔离级别表示一个事务可以读取另一个事务修改但是还没提交的数据。该级别不能防止脏读和不可重复读，因此很少使用该隔离级别
+* READ_COMMITTED：该隔离级别表示一个事务只能读取另一个事务已经提交的数据。该级别可以防止脏读，这也是大多数情况下推荐的值
+* REPEATABLE_READ：该隔离级别表示一个事务在整个过程中，可以多次重复执行某个查询，并且每次返回的记录都相同。即使多次查询之间有新增的数据满足该查询，这些记录也会被忽略。该级别可以防止脏读和不可重复读
+* SERIALIZABLE：所有事务依次逐个执行，事务之间完全不可能产生干扰，可以防止脏读、不可重复读和幻读。但这严重影响程序的性能，通常情况下不会用到该级别
 
+######Spring 事务传播方式
+org.springframework.transaction.annotation.Propagation 枚举类定义了七个表示传播行为的值：
+* REQUIRED：如果当前存在事务，则加入该事务；如果当前没有事务，则创建一个新的事务
+* SUPPORTS：如果当前存在事务，则加入该事务；如果当前没有事务，则以非事务的方式运行
+* MANDATORY：如果当前存在事务，则加入该事务；如果当前没有事务，则抛出异常
+* REQUIRES_NEW：创建一个新的事务，如果当前存在事务，则挂起当前事务
+* NOT_SUPPORTED：以非事务方式运行，如果当前存在事务，则挂起当前事务
+* NEVER： 以非事务方式运行，如果当前存在事务，则抛出异常
+* NESTED：如果当前存在事务，则创建一个事务作为当前事务的嵌套事务来运行；如果当前没有事务，则该取值等于REQUIRED
 
 
 
