--- a/note/随笔记.md
+++ b/note/随笔记.md
@@ -107,7 +107,7 @@ HashSet 也是利用 HashMap 为基础实现的
 
 
 # HashMap 和 ConcurrentHashMap
-**HashMap**
+#### HashMap
 HashMap 的底层是基于 数组+链表 的，但是jdk1.7 和 jdk1.8 里的实现略有不同
 
 _jdk1.7_
@@ -155,7 +155,7 @@ get方法：
 
 HashMap 在多线程下，扩容时可能会出现环形链表，导致死循环。因此 JDK 推出了专项专用的 ConcurrentHashMap ，该类位于 java.util.concurrent 包下，专门用于解决并发问题。
 
-**ConcurrentHashMap**
+#### ConcurrentHashMap
 jdk1.7 和 jdk1.8 里的实现也略有不同
 
 _jdk1.7_
