--- a/note/shell/速查.md
+++ b/note/shell/速查.md
@@ -1,3 +1,5 @@
+# linux Shell
+
 ### \# \$
 
 * $? 表示上一个命令的返回值
@@ -44,6 +46,18 @@ sed -e '/^alarm/d' -e '/\/resources$/d
 * cut -c 1-10 显示行中1到10个字符的内容，-c 表示字符，-b 表示字节，-f 表示定义字段
 * -d 指定字段分隔符
 
+### 字典类型
+```
+dict=([key1]="value1" [key2]="value2" [key3]="value3")
+${dic["key1"]} # 指定key的value
+${!dic[*]}  # 所有key
+${dic[*]}  # 所有value
+```
+
+### shell 批量删除redis 中的缓存对象
+
+redis-cli -h {HOST} -p {PORT} -a {PASSWD} keys {key关键字，支持通配符} |xargs redis-cli -h {HOST} -p {PORT} -a {PASSWD} del
+
 
 # 问题
 
@@ -52,6 +66,17 @@ sed -e '/^alarm/d' -e '/\/resources$/d
 这个是不同系统的编码格式引起的，在windows系统中编辑的.sh文件有不可见字符，在linux下执行，会报该异常。
 在vi或vim 的非编辑模式下，输入 :set off 查看文件编码格式；输入:set off=unix ，再输入 :wq 保存
 
+* emoji 表情存储mysql
+
+数据库、表、列字段，编码格式都需要设置为 utf8mb4
+连接数据源时，需要指定编码格式
+```
+<property name="connectionInitSqls">
+    <list>
+        <value>set names 'utf8mb4'</value>
+    </list>
+</property>
+```
 
 
 
