--- a/note/shell/速查.md
+++ b/note/shell/速查.md
@@ -25,6 +25,12 @@ find . -maxdepth 2 -path "*.com*" -type d
 * -path "*.com*" 查找名称中包含.com的文件；
 * -type d 查找目录
 
+### awk
+
+awk -F' ' '{print $2}'
+* -F 指定分隔符，可以是一个字符串也可以是正则表达式
+* print $2 按照分隔符分隔，然后输出第二项
+
 ### sed 是一种在线编辑器，一次处理一行数据
 
 sed -n "1,10p" {FILE}
