--- a/note/问题记录.md
+++ b/note/问题记录.md
@@ -1,3 +1,15 @@
+# tomcat 的三种部署方式
+
+1. war 包形式，直接放到 tomcat/webapps 下
+
+2. 在 tomcat/conf 下创建 Catalina/localhost 目录，并在该目录下新建一个xml文件，名字要和 path 的值一致
+<Context path="/test" docBase="/data/platform/test" debug="0" privileged="true" reloadable="true" />
+
+3. 在 tomcat/conf 下的 server.xml 中，<Host> 节点添加一个 <Context>
+<Context path="/test" docBase="/data/platform/test" debug="0" privileged="true" reloadable="true"></Context>
+
+
+
 # tomcat 在访问路径中去除项目名称
 
 server.xml 中配置
