《从Lucene到Elasticsearch：全文检索实战》 读书笔记

--- a/note/shell/速查.md
+++ b/note/shell/速查.md
@@ -70,7 +70,7 @@ redis-cli -h {HOST} -p {PORT} -a {PASSWD} keys {key关键字，支持通配符} 
 * sh脚本异常：/bin/bash^M: bad interpreter: No such file or directory
 
 这个是不同系统的编码格式引起的，在windows系统中编辑的.sh文件有不可见字符，在linux下执行，会报该异常。
-在vi或vim 的非编辑模式下，输入 :set off 查看文件编码格式；输入:set off=unix ，再输入 :wq 保存
+在vi或vim 的非编辑模式下，输入 :set ff 查看文件编码格式；输入:set ff=unix ，再输入 :wq 保存
 
 * emoji 表情存储mysql
 
