java8 AES加密使用长密钥时报错的处理

--- a/note/问题记录.md
+++ b/note/问题记录.md
@@ -50,4 +50,12 @@ server.xml 中配置
 </Host>
 ```
 
+# AES 加密使用超过128bits 的密钥时，报错
+java.security.InvalidKeyException: Illegal key size or default parameters
+1. 原因：因为美国的出口限制，Sun通过权限文件（local_policy.jar、US_export_policy.jar）做了相应限制
+2. 解决方法：
+    下载 Java Cryptography Extension (JCE) Policy Files : jce_policy_8.zip
+    java8 的文件下载：https://www.oracle.com/java/technologies/javase-jce8-downloads.html
+    之后放入 jre1.8.0_51\lib\security 和 jdk1.8.0_51\jre\lib\security 目录下
+
         
