--- a/note/问题记录.md
+++ b/note/问题记录.md
@@ -2,7 +2,7 @@
 
 1. war 包形式，直接放到 tomcat/webapps 下
 
-2. 在 tomcat/conf 下创建 Catalina/localhost 目录，并在该目录下新建一个xml文件，名字要和 path 的值一致
+2. 在 tomcat/conf 下创建 Catalina/localhost 目录，并在该目录下新建一个xml文件，名字要和 path 的值一致，即 test.xml
 <Context path="/test" docBase="/data/platform/test" debug="0" privileged="true" reloadable="true" />
 
 3. 在 tomcat/conf 下的 server.xml 中，<Host> 节点添加一个 <Context>
