--- a/note/问题记录.md
+++ b/note/问题记录.md
@@ -58,4 +58,16 @@ java.security.InvalidKeyException: Illegal key size or default parameters
     java8 的文件下载：https://www.oracle.com/java/technologies/javase-jce8-downloads.html
     之后放入 jre1.8.0_51\lib\security 和 jdk1.8.0_51\jre\lib\security 目录下
 
-        
+
+# Github push 代码时提示输入账号密码
+1. 原因：clone 代码时使用的是https 方式
+2. 解决方法：需改为ssh 方式
+```
+1. git remote -v 查看，若输出是https 开头的，则表示是https 方式clone 的
+2. git remote rm origin 移除https 方式
+3. git remote -v 再次查看，无输出代表移除成功
+4. git remote add origin +git地址  重新添加，git 开头的链接是ssh 方式
+5. git remote -v 再次查看，git@ 开头表示添加成功
+```
+
+
