add rsync shell

--- a/note/shell/速查.md
+++ b/note/shell/速查.md
@@ -64,6 +64,10 @@ ${dic[*]}  # 所有value
 
 redis-cli -h {HOST} -p {PORT} -a {PASSWD} keys {key关键字，支持通配符} |xargs redis-cli -h {HOST} -p {PORT} -a {PASSWD} del
 
+### rsync
+
+rsync -zvrI -e 'ssh -p 22' ~/Downloads/nginx-1.18.0.tar.gz root@49.234.133.57:~/upload
+
 
 # 问题
 
